--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.4",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-calendar": "^3.4.0",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-notifications": "^1.7.2",
     "react-redux": "^7.2.5",
@@ -23,6 +25,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "sass": "^1.41.0",
+    "victory": "^36.0.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
