--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.16.13",
     "axios": "^0.21.4",
     "formik": "^2.2.9",
+    "persist": "^0.2.7",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-datepicker": "^4.2.1",
@@ -23,6 +24,7 @@
     "recharts": "^2.1.2",
     "redux": "^4.1.1",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "sass": "^1.41.0",
     "victory": "^36.0.1",
