--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
+    "firebase": "^9.1.0",
     "formik": "^2.2.9",
     "persist": "^0.2.7",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-notifications": "^1.7.2",
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
