--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
     "axios": "^0.21.4",
+    "firebase": "^8.10.0",
     "formik": "^2.2.9",
     "persist": "^0.2.7",
     "react": "^17.0.2",
